# jackaroo-py

./: .gitignore  Board.py  Deck.py  Game.py  Player.py  README.md  __main__.py  ball.py  board.py  check.py  deck.py  entry.py  entry_5.py  environment.yml  game.py  guts.py  main.py  move_in_win_col.py  mypy.ini  policies.py  pyproject.toml  requirements.txt
jackaroo/: Ball.py  Game.py  Player.py  main.py  policies.py
tests/: test_deck.py
utils/: actions.json  actions.py  logger.py  utils.py
